--- a/index.adoc
+++ b/index.adoc
@@ -3,7 +3,7 @@
 
 This is a test.
 
-I added a document: link:forklift.html[Forklift]
+I added a document: link:documentation/master.html[Forklift]
 
 And a link:sample[sample].
 
